--- a/sass/style.scss
+++ b/sass/style.scss
@@ -58,7 +58,7 @@ body {
 }
 .widget_wrap{
   margin:auto;
-  max-width: 350px;
+  max-width: 600px;
   border-radius:5px;-moz-border-radius:5px;-webkit-border-radius:5px;
   border:1px solid #efefef;
 }
@@ -99,6 +99,10 @@ form.add-comment{
     &:disabled{
       background:#E2E2E2;
       color: #BBB;
+      &:hover{
+        text-shadow:0px 0px 5px #fff;
+        box-shadow:inset 0px 0px 3px #fff;-moz-box-shadow:inset 0px 0px 3px #fff;-webkit-box-shadow:inset 0px 0px 3px #fff;
+      }
     }
     &:hover{
       text-shadow:0px 0px 5px #000;
