--- a/sass/style.scss
+++ b/sass/style.scss
@@ -132,6 +132,7 @@ form.add-comment{
 
 .comments_wrap{
   padding:20px;
+  transition: all 500ms ease-in;
 }
 .comment-block {
   font-size: 14px;
@@ -158,8 +159,38 @@ form.add-comment{
     .content{
       line-height: normal;
     }
+
   }
+
+
+
 }
+
+  .results-enter {
+    opacity:0;
+    max-height:0;
+  }
+
+  .results-enter.results-enter-active {
+    opacity:1;
+  max-height:100px;
+    transition: all 500ms ease-in;
+
+  }
+
+  .results-leave {
+    opacity:1;
+  max-height:100px;
+  }
+
+  .results-leave.results-leave-active {
+    opacity:0;
+max-height:0;
+    transition: all 300ms ease-in;
+  }
+
+
+
 .comment-avatar {
   flex-shrink: 0;
   img{
